--- a/wp-content/themes/stomatcity/style.css
+++ b/wp-content/themes/stomatcity/style.css
@@ -967,3 +967,21 @@ textarea {
 	margin-right: auto;
 	margin-bottom: 1.5em;
 }
+
+
+/* =============================================================================== */
+						 /* Стилі для преміум стоматологій */
+/* =============================================================================== */
+
+.elementor-element.e-grid.e-con-full.e-con.e-child {
+    border-radius: 10px; 
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.01); 
+    background-color: #FFFFFF; 
+    height: 314px;
+    margin: 10px;
+}
+
+.elementor-element.e-grid.e-con-full.e-con.e-child .swiper-slide-inner img {
+    border-top-left-radius: 10px; 
+    border-top-right-radius: 10px;
+}
